Fix the border-radius on the newsletter field on iOS devices

--- a/app/components/footer/styles.module.css
+++ b/app/components/footer/styles.module.css
@@ -86,6 +86,7 @@
 .newsletter .input input {
   flex: 1;
   border: 0;
+  border-radius: 0;
   background-color: var(--newsletterInputColor);
   padding: 0 1rem; /* 0 16px */
   outline: 0;
